@@ -9,6 +9,8 @@
 5. qmake updates - thanks to Hugues Delorme.
 6. Dont call killTimer if timer was never registered - fixes Qt warning on app 
    closure under windows. Thanks to Hugues Delorme.
+7. When setting KDE SC4.5 blur-behind hint, only set rects that can actually be
+   blurred - should speed things up. (Idea and code stolen from Bespin)
 
 1.5.1
 -----
